# PiperXR

./: .gitignore  LICENSE  Makefile  README.md  README_zh.md  pyproject.toml  requirements.txt
.cursor/hooks/: auto-commit.sh
assets/piper/: piper_description.urdf  piper_dual.xml  piper_dual_description.urdf  scene.xml  scene_dual.xml
piper_pico/: __init__.py  __main__.py  config.py  paths.py
piper_pico/common/: __init__.py  hand_ee_mapping.py  pose_mapping.py  teleop_logger.py  xr_record.py
piper_pico/real/: __init__.py  piper_arm_proxy.py  real_piper_teleop_controller.py
piper_pico/simulation/: _mock_xr_moving.py  piper_mujoco_controller.py  teleop.py  validate.py
piper_xr/: __init__.py  __main__.py  config.py  paths.py
piper_xr/common/: __init__.py  pose_mapping.py  xr_record.py
piper_xr/real/: joint_indices.py  piper_arm_proxy.py  real_piper_teleop_controller.py
piper_xr/simulation/: __init__.py  piper_mujoco_controller.py  teleop.py  validate.py
scripts/: diagnose_xr.py  generate_dual_arm.py  render_scene.py  setup_env.sh  setup_github_push.sh  strip_urdf.py
scripts/real/: teleop_piper_real.py
scripts/simulation/: teleop_piper_mujoco.py
tests/: _mock_piper_sdk.py  _mock_xrobotoolkit_sdk.py  conftest.py  test_pipeline.py  test_real_controller.py  validate_piper_pipeline.py
