[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-pico"
version = "0.1.0"
description = "PICO 4 Ultra 头显遥操作松灵 PiPER 机械臂（MuJoCo 仿真）"
readme = {text = "", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "piper-pico"}]
dependencies = [
    "mujoco>=3.1",
    "numpy>=1.24",
    "placo>=0.1",
    "meshcat>=0.3",
    "tyro>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black>=23",
]

[project.scripts]
piper-teleop = "piper_pico.simulation.teleop:main"

[tool.setuptools]
packages = ["piper_pico", "piper_pico.simulation"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
