[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-xr"
version = "0.1.0"
description = "PiperXR — XR teleoperation for AgileX PiPER (MuJoCo sim + real robot)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Non-Commercial — see LICENSE"}
authors = [{name = "PiperXR contributors"}]
keywords = ["robotics", "teleoperation", "xr", "vr", "piper", "mujoco", "pico"]
dependencies = [
    "mujoco>=3.1",
    "numpy>=1.24",
    "placo>=0.1",
    "meshcat>=0.3",
    "tyro>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black>=23",
]

[project.scripts]
piper-xr = "piper_xr.simulation.teleop:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["piper_xr*"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
